# generator_shpor

./: .gitignore  README.md  bot.py  constants.py  convert.py  exceptions.py  main.py  pyproject.toml  requirements.txt  webhook.service
.github/workflows/: tests.yml
prism/: prism.css  prism.js
static/: custom.css  custom.js
static/ico/: browserconfig.xml
tests/: test_folder_operations.py  test_html.py  test_transliterate.py  test_zip.py
