[tool.poetry]
name = "generator-shpor"
version = "0.1.0"
description = ""
authors = ["Alexey Potapov <2furius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "4.16.1"
beautifulsoup4 = "4.12.3"
python-dotenv = "1.0.1"
transliterate = "^1.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
